--- a/DVDRentalAPI.Presentation.csproj
+++ b/DVDRentalAPI.Presentation.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DVDRentalAPI.Application\DVDRentalAPI.Application.csproj" />
+    <ProjectReference Include="..\DVDRentalAPI.Infrastructure\DVDRentalAPI.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
