--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "Server=localhost;Database=ecommerce;Port=5432;User Id=postgres;Password=postgres123"
   }
 }
