--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "Server=localhost;Database=ecommerce;Port=5432;User Id=postgres;Password=postgres123"
+  }
 }
